--- a/my-first-angular-app/src/app/app.component.html
+++ b/my-first-angular-app/src/app/app.component.html
@@ -1,4 +1,31 @@
-<div style = "text-align:center">
-  <h1> Welcome to {{ title }}! </h1>
+<div class="container" style = "text-align:center">
+  <div class="row">
+    <div class="col-xs-12">
+      <h1> Welcome to {{ title }}! </h1>
+      <app-new-cmp></app-new-cmp>
+
+    </div>
+  </div>
+
 </div>
-<app-new-cmp></app-new-cmp>
+
+<div class="container" style="text-align: left">
+  <div class="row">
+    <div class="col-xs-3">
+      <h3>Welcome to {{title}}</h3>
+
+      <app-servers></app-servers>
+
+    </div>
+  </div>
+</div>
+
+<div class="container" style="text-align: left">
+  <div class="row">
+    <div class="col-xs-3">
+
+     <app-warning-alert></app-warning-alert>
+
+    </div>
+  </div>
+</div>
