--- a/my-first-angular-app/src/app/server/server.component.html
+++ b/my-first-angular-app/src/app/server/server.component.html
@@ -1,7 +1,13 @@
 <p>{{serverCreationStatus}}</p>
 
 
+<label>Server Name</label>
+<input
+  type="text"
+  class="form-control"
+  (input)="onUpdateServerName($event)">
 
+<p>{{serverName}}</p>
 
 
 <button class="btn btn-primary" [disabled]="allowNewServer" (click)="onCreateServer()">Add Server</button>
