--- a/my-first-angular-app/src/app/server/server.component.html
+++ b/my-first-angular-app/src/app/server/server.component.html
@@ -1,16 +1,24 @@
 <p>{{serverCreationStatus}}</p>
-
+<p *ngIf="serverCreationStatus" else noServer>Server was created, server name is {{serverName}}</p>
+<ng-template #noServer>
+  <p>No Server was created!</p>
+</ng-template>
 
 <label>Server Name</label>
+<!--<input
+  type="text"
+  class="form-control"
+  (input)="onUpdateServerName($event)">-->
+
 <input
   type="text"
   class="form-control"
-  (input)="onUpdateServerName($event)">
+  [(ngModel)]="serverName">
 
 <p>{{serverName}}</p>
 
 
-<button class="btn btn-primary" [disabled]="allowNewServer" (click)="onCreateServer()">Add Server</button>
+<button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
 
 <p [innerText]="allowNewServer"></p>
 
