--- a/my-first-angular-app/src/app/server/server.component.html
+++ b/my-first-angular-app/src/app/server/server.component.html
@@ -25,5 +25,5 @@
 <p>Server Component Works!</p>
 <p>{{servercomponentVariable}}</p>
 
-<h1>Server with ID {{serverId}} is {{getServerStatus()}}</h1>
+<h1 [ngStyle]="{backgroundColor: getColor()}">Server with ID {{serverId}} is {{getServerStatus()}}</h1>
 
