--- a/my-first-angular-app/src/app/app.component.html
+++ b/my-first-angular-app/src/app/app.component.html
@@ -40,3 +40,6 @@
     </div>
   </div>
 </div>
+
+<button class="btn btn-primary" (click)="showSecret = !showSecret">Display Details</button>
+<p>Secret Password = tuna</p>
